# FocusFrame

./: .gitignore  README.md  go.mod  go.sum  main.go  makefile  mouse-listener.go  screenshot.go  timing.go
cmd/recorder/: main.go
go-backend/: go.mod
go-backend/cmd/recorder/: main.go
go-backend/internal/config/: config.go
go-backend/internal/editing/: editor.go
go-backend/internal/recording/: recorder.go
go-backend/internal/tracking/: mouse.go  types.go
go-backend/internal/video/: effects.go  pipeline.go  processor.go
go-rust-backend/: go.sum  makefile  test.sh
go-rust-backend/cmd/recorder/: main.go
go-rust-backend/internal/config/: config.go
go-rust-backend/internal/editing/: editor.go
go-rust-backend/internal/recording/: recorder.go
go-rust-backend/internal/tracking/: mouse.go
go-rust-backend/internal/video/: effects.go  pipeline.go  processor.go  progress.go  types.go
go-rust-backend/internal/video/video-editing-engine/video-effects-processor/: Cargo.toml
go-rust-backend/internal/video/video-editing-engine/video-effects-processor/include/: video_editing_engine.h
go-rust-backend/internal/video/video-editing-engine/video-effects-processor/src/: constants.rs  lib.rs  plot.py  renderer.rs  smoothing.rs  temp  tests.rs  types.rs  utils.rs  video.rs
internal/editing/: editor.go
internal/recording/: recorder.go
internal/tracking/: mouse.go  types.go
tauri-desktop-app/src-tauri/: Cargo.toml
tauri-desktop-app/src/routes/: +page.svelte
tauri-frontend/: package.json  pnpm-lock.yaml
tauri-frontend/src-tauri/: tauri.conf.json
(+6 files in other folders)
